[package]
name = "scent"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.36", features = ["derive"]} 
cli_toolbox = { git = "https://github.com/AlbinDalbert/CLI-Toolbox", version = "0.1.0" }
dirs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
